--- a/assignment4.css
+++ b/assignment4.css
@@ -1,55 +1,23 @@
 body {
     margin: 0;
-    height: 100hv;
-    width: 100wv;
     display: flex;
     justify-content: center;
     margin-top: 2%;
-}
-
-b {
-    font-size: 2rem;
-}
-
-input {
-    width: 100%;
-    height: 2.5rem;
-}
-
-h4 {
-    margin: 0;
-    font-weight: 900;
-}
-
-span {
-    cursor: pointer;
+    font-family: Arial, sans-serif;
 }
 
 .brand {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
-button.butn {
-    width: 100%;
-}
-
-.signupbtn {
-    cursor: pointer;
+.butn {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: smaller;
-    border: 1px solid;
-    height: 2.5rem;
-    background-color: black;
-    color: white;
-    width: 40%;
 }
 
-.login,
-.signup {
-    background-color: white;
+.signup,
+.login {
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -57,39 +25,28 @@ button.butn {
     width: 50%;
     border: 1px solid;
     height: 60%;
-    position: absolute;
-    bottom: -1px;
+    background-color: white;
 }
 
 .signup {
-    border-bottom: 1px solid white;
-}
-
-.butn {
-    position: relative;
-    width: 35%;
-    display: flex;
+    border-bottom: none;
 }
 
 .center {
     width: 48%;
-    border: 1px solid;
     padding: 1% 2%;
     background-color: rgb(237, 237, 237);
 }
 
 .containerr {
     background-color: white;
-    display: flex;
-    flex-direction: column;
     border: 1px solid;
     padding: 2%;
+    margin-bottom: 20px;
 }
 
 .leftcont {
-    position: relative;
-    left: 0;
-    width: 69%;
+    width: 70%;
 }
 
 .formcontent {
@@ -98,162 +55,107 @@ button.butn {
 }
 
 .rightcont {
-    position: relative;
-    left: 7%;
+    width: 30%;
 }
 
 .heading {
-    margin-bottom: 4%;
+    margin-bottom: 20px;
+    font-size: 1.8rem;
 }
 
-.youremail,
-.confirmemail,
-.country,
-.zipcode,
-.pass,
-.confirmpass,
-.terms {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 4%;
+.input-group {
+    margin-bottom: 20px;
 }
 
-.labl {
-    display: flex;
-    flex-direction: row-reverse;
-    width: 45%;
+.input-group label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+input[type="email"],
+input[type="password"],
+select {
+    width: 100%;
+    height: 40px;
+}
+
+.signupbtnsec {
+    text-align: right;
+}
+
+.signupbtn {
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1rem;
+    border: none;
+    height: 40px;
+    width: 40%;
+    background-color: black;
+    color: white;
 }
 
 .formdesc {
-    font-size: smaller;
-    width: 71%;
-    font-weight: bold;
-    line-height: 1;
-    margin-top: 3%;
+    margin-top: 20px;
 }
 
-.inpt {
-    width: 55%;
-    margin-left: 5%;
+.formdesc p {
+    margin-bottom: 10px;
 }
 
 .footer {
-    margin-top: 1%;
-}
-
-#loginterms {
-    margin-bottom: 2%;
-    justify-content: space-between;
-    padding-left: 20%;
+    margin-top: 20px;
 }
 
 .footername {
-    font-size: smaller;
     display: flex;
     justify-content: space-evenly;
     padding: 0 5%;
 }
 
+.footername span {
+    cursor: pointer;
+}
+
 .footerbtn {
     display: flex;
     justify-content: center;
-    margin-top: 1%;
-}
-
-.iagree {
-    text-wrap: nowrap;
-    position: relative;
-    top: 30%;
-    left: 4%;
-    font-size: smaller;
-}
-
-.signupbtnsec {
-    padding-left: 47.5%;
+    margin-top: 20px;
 }
 
 .btn1,
 .btn2 {
     cursor: pointer;
-    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid;
-    font-size: 0.9rem;
+    font-size: 1rem;
     font-weight: bold;
     border-radius: 0.4rem;
     line-height: 1;
-    padding: 0.5%;
-}
-
-.countryselec {
-    width: 100%;
-    height: 2.5rem;
-    background-color: rgb(237, 237, 237);
-}
-
-.btn1 {
-    width: 15%;
-}
-
-.btn2 {
-    width: 25%;
-}
-
-p {
-    margin: 0;
-}
-
-#login {
-    display: none;
+    padding: 5px 10px;
+    margin-right: 20px;
 }
 
 @media only screen and (max-width: 600px) {
-    body {
-        margin: 0;
-    }
-
     .center {
         width: 100%;
         padding: 1%;
     }
 
-    input {
-        width: 100%;
-        height: 1.7rem;
+    input[type="email"],
+    input[type="password"],
+    select {
+        height: 30px;
     }
 
-    .inpt {
-        width: 55%;
-        margin-left: 5%;
-    }
-
-    h4 {
-        font-size: smaller;
-    }
-
-    .labl {
-        font-size: smaller;
-        display: flex;
-        flex-direction: row-reverse;
-        width: 50%;
-    }
-
-    .formdesc {
-        font-size: 0.92rem;
-        width: 71%;
-        font-weight: bold;
-        line-height: 1;
-        margin-top: 3%;
-    }
-
-    .iagree {
+    .input-group label {
         font-size: 0.9rem;
     }
 
     .signupbtn {
-        height: 20%;
+        height: 30px;
         width: 60%;
     }
 
@@ -263,23 +165,6 @@ p {
 
     .btn2 {
         width: 30%;
-    }
-
-    .terms {
-        padding-left: 5%;
-    }
-
-    .signupbtnsec {
-        padding-left: 50%;
-    }
-
-    #loginterms {
-        font-size: 0.9rem;
-    }
-
-    .countryselec {
-        font-size: smaller;
-        height: 2rem;
     }
 }
 
